# PromptEngineeringDeployed

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
assets/: dialog-BBryd9Yw.js  fs-Cyd06YnP.js  index-CcSq0_x6.css  index-CkkzdTb8.js  index-D5qVWH4q.js  index-WiVixrjV.css  index-Wrxtn6EV.js  tauri-BW5MH4ZM.js
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: AgreementScreen.css  AgreementScreen.tsx  AssessmentScreen.css  AssessmentScreen.tsx  DemographicsScreen.css  DemographicsScreen.tsx  DragDrop.css  GuidedSection.css  GuidedSection.tsx  GuidedSectionTypeCopyPaste.tsx  GuidedSectionTypeDragDrop.tsx  GuidedSectionTypeMultiShot.tsx  InstructionIntroScreen.tsx
src/utils/: csvExport.ts  instructions.tsx
